Add PalindromeCounter